fix white space over fat

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -159,6 +159,7 @@ article
       font-size 0.9em
       border 1px solid color-border
       border-radius 3px
+      white-space pre
 
     pre
       background #eee
